adding friendship enpoints
